--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="devtools__content">
-            <div class="d-flex  align-items-center">
+            <div class="col__wrapper d-flex  align-items-center">
               <img class="icons__brand" src="/img/vscode.png" alt="VS Code" />
               <h5>
                 <a href="https://code.visualstudio.com/" target="_blank"
@@ -80,7 +80,7 @@
             </p>
           </div>
           <div class="devtools__content mt-4">
-            <div class="d-flex align-items-center">
+            <div class="col__wrapper d-flex align-items-center">
               <img class="icons__brand" src="/img/codepen.png" alt="Code Pen" />
               <h5>
                 <a href="https://codepen.io/" target="_blank">Code Pen</a>
@@ -94,7 +94,7 @@
         </div>
         <div class="col-md-6">
           <div class="devtools__content">
-            <div class="d-flex align-items-center">
+            <div class="col__wrapper d-flex align-items-center">
               <img
                 class="icons__brand"
                 src="/img/bootstrap.png"
@@ -113,7 +113,7 @@
             </p>
           </div>
           <div class="devtools__content mt-4">
-            <div class="d-flex align-items-center">
+            <div class="col__wrapper d-flex align-items-center">
               <img
                 class="icons__brand"
                 src="/img/emmet.png"
@@ -140,7 +140,7 @@
       <h3 class="section__title text-center">HTML5 Resources</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/mdn.png"
@@ -160,7 +160,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/css-tricks-3.png"
@@ -180,7 +180,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/html-cheat.png"
@@ -207,7 +207,7 @@
       <h3 class="section__title text-center">CSS Resources</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/mdn.png"
@@ -227,7 +227,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/codrops.png"
@@ -247,7 +247,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/caniuse.png" alt="Can I Use?" />
             <h5>
               <a href="https://caniuse.com/" target="_blank">Can I Use?</a>
@@ -261,7 +261,7 @@
       </div>
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/tutplus.png"
@@ -281,7 +281,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/animatecss.png"
@@ -299,7 +299,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/clippy.png" alt="Clippy" />
             <h5>
               <a href="https://bennettfeely.com/clippy/" target="_blank"
@@ -320,7 +320,7 @@
       <h3 class="section__title text-center">Fonts and Typography Tools</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/googlefonts.png"
@@ -338,7 +338,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex-align-items-center">
+          <div class="col__wrapper d-flex-align-items-center">
             <div class="d-flex align-items-center">
               <img
                 class="icons__brand"
@@ -358,7 +358,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <div class="d-flex align-items-center">
               <img
                 class="icons__brand"
@@ -383,7 +383,7 @@
 
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <div class="d-flex align-items-center">
               <img class="icons__brand" src="/img/myfonts.png" alt="MyFonts" />
               <h5>
@@ -398,27 +398,26 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
-            <div class="d-flex align-items-center">
-              <img
-                class="icons__brand"
-                src="/img/typetester.png"
-                alt="TypeTester"
-              />
-              <h5>
-                <a href="https://www.typetester.org/" target="_blank"
-                  >TypeTester</a
-                >
-              </h5>
-            </div>
+          <div class="col__wrapper d-flex align-items-center">
+            <img
+              class="icons__brand"
+              src="/img/typetester.png"
+              alt="TypeTester"
+            />
+            <h5>
+              <a href="https://www.typetester.org/" target="_blank"
+                >TypeTester</a
+              >
+            </h5>
           </div>
+
           <p>
             Web application for testing and comparing more than 2200 typefaces.
           </p>
         </div>
         <div class="col-md-4">
           <div class="d-flex align-items center">
-            <div class="d-flex align-items-center">
+            <div class="col__wrapper d-flex align-items-center">
               <img
                 class="icons__brand"
                 src="/img/typeguide.svg"
@@ -443,7 +442,7 @@
       <h3 class="section__title text-center">Great Colors and Tools</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <div class="d-flex align-items-center">
               <img
                 class="icons__brand"
@@ -463,7 +462,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/materialpalette.jpg"
@@ -481,7 +480,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/muzli.png" alt="Colors Muzli" />
             <h5>
               <a href="https://colors.muz.li/" target="_blank">Colors Muzli</a>
@@ -496,7 +495,7 @@
       </div>
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <div class="d-flex align-items-center">
               <img
                 class="icons__brand"
@@ -516,7 +515,7 @@
         <div class="col-md-4">
           <div class="d-flex align-items-center">
             <div class="d-flex-align-items-center">
-              <div class="d-flex align-items-center">
+              <div class="col__wrapper d-flex align-items-center">
                 <img
                   class="icons__brand"
                   src="/img/uigradients.png"
@@ -538,7 +537,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <div class="d-flex align-items-center">
               <img
                 class="icons__brand"
@@ -567,7 +566,7 @@
       <h3 class="section__title text-center">Images and Videos</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/unsplash.svg" alt="Unsplash" />
             <h5>
               <a href="https://unsplash.com/" target="_blank">Unsplash</a>
@@ -579,7 +578,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/thestocks.jpg"
@@ -595,7 +594,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/isorepublic.png"
@@ -615,7 +614,7 @@
       </div>
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/pixaby.png" alt="Pixaby" />
             <h5>
               <a href="https://pixabay.com/" target="_blank">Pixaby</a>
@@ -627,7 +626,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <d class="d-flex align-items-center">
+          <d class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/subtlepatterns.png"
@@ -647,7 +646,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/randomuser.png"
@@ -672,7 +671,7 @@
       <h3 class="section__title text-center">Best Icons and Tools</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/isorepublic.png"
@@ -688,7 +687,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/fontawesome.ico"
@@ -706,7 +705,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/flaticon.png" alt="Flaticon" />
             <h5>
               <a href="https://www.flaticon.com/" target="_blank">Flaticon</a>
@@ -721,7 +720,7 @@
 
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/iconmonstr.png"
@@ -736,7 +735,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items center">
             <img class="icons__brand" src="/img/icomoon.png" alt="Icomoon" />
             <h5>
               <a href="https://icomoon.io/" target="_blank">Icomoon</a>
@@ -748,7 +747,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/fontawesome.ico"
@@ -771,7 +770,7 @@
       <h3 class="section__title text-center">Find Designs Inspirations</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/dribbble.png" alt="Dribbble" />
             <h5>
               <a href="https://dribbble.com/" target="_blank">Dribbble</a>
@@ -783,7 +782,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/behance.png" alt="Behance" />
             <h5>
               <a href="https://www.behance.net/" target="_blank">Behance</a>
@@ -796,14 +795,14 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
-              src="/img/pinterest.png"
+              src="/img/pinterestx.png"
               alt="Pinterest"
             />
             <h5>
-              <a href="https://www.pinterest.ph/" target="_blank">Pinterest</a>
+              <a href="https://www.behance.net/" target="_blank">Pinterest</a>
             </h5>
           </div>
           <p>
@@ -815,7 +814,7 @@
 
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items center">
             <img
               class="icons__brand"
               src="/img/themeforest.png"
@@ -831,7 +830,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items center">
             <img class="icons__brand" src="/img/uplabs.png" alt="UPLabs" />
             <h5>
               <a href="https://www.uplabs.com/" target="_blank">UPLabs</a>
@@ -843,7 +842,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items center">
             <img
               class="icons__brand"
               src="/img/mediaqueries.png"
@@ -863,7 +862,7 @@
       <h3 class=" section__title text-center">Popular Blogs & Communities</h3>
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/smashingmagazine.png"
@@ -881,7 +880,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/sitepoint.jpg"
@@ -897,7 +896,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper d-flex align-items center">
             <img
               class="icons__brand"
               src="/img/webdesignerdepot.png"
@@ -917,7 +916,7 @@
 
       <div class="row mt-4">
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/designernews.png"
@@ -935,7 +934,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/heydesigner.png"
@@ -950,7 +949,7 @@
           <p>Curated articles for designers and front-end developers.</p>
         </div>
         <div class="col-md-4">
-          <div class="d-flex align-items center">
+          <div class="col__wrapper  d-flex align-items center">
             <img
               class="icons__brand"
               src="/img/frontendfront.png"
@@ -966,6 +965,37 @@
             A place where front-end developers can ask questions, share links,
             and show their work..
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download Files -->
+    <section class="container download">
+      <h3 class="section__title text-center">DOWNLOAD PROJECT MATERIALS</h3>
+      <div class="row">
+        <div class=" col-md-6">
+          <div class="card card-body col__wrapper d-flex align-items-center">
+            <img class="icons__brand" src="/img/html5.png" alt="HTML5" />
+            <h5 class="mt-3">
+              <a
+                href="https://drive.google.com/open?id=1_G21QNmuSaXjtAXihucw5SCpOk0Y_hUN"
+                target="_blank"
+                >Aguila Demo HTML Source</a
+              >
+            </h5>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card card-body col__wrapper  d-flex align-items-center">
+            <img class="icons__brand" src="/img/ps.png" alt="PSD Design" />
+            <h5 class="mt-3">
+              <a
+                href="https://drive.google.com/open?id=1lMCoxllBKknQTC1Lv0eOpdeL_kejAVvJ"
+                target="_blank"
+                >PSD Web Design</a
+              >
+            </h5>
+          </div>
         </div>
       </div>
     </section>
