--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
               some ideas or do some tests. I use it in my advanced CSS course.
             </p>
           </div>
+          <div class="devtools__content mt-4">
+            <div class="col__wrapper d-flex align-items-center">
+              <img
+                class="icons__brand"
+                src="/img/bootstrap.png"
+                alt="Bootstrap 4 CheatSheet"
+              />
+              <h5>
+                <a
+                  href="https://hackerthemes.com/bootstrap-cheatsheet/#justify-content-between"
+                  target="_blank"
+                  >Bootstrap 4 CheatSheet</a
+                >
+              </h5>
+            </div>
+            <p>
+              Bootstrap 4 CheatSheet for easy styling your elements using
+              pre-made resusable components for fast development.
+            </p>
+          </div>
         </div>
         <div class="col-md-6">
           <div class="devtools__content">
@@ -973,7 +993,7 @@
     <section class="container download">
       <h3 class="section__title text-center">DOWNLOAD PROJECT MATERIALS</h3>
       <div class="row">
-        <div class=" col-md-6">
+        <div class=" col-md-4">
           <div class="card card-body col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/html5.png" alt="HTML5" />
             <h5 class="mt-3">
@@ -985,7 +1005,7 @@
             </h5>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="card card-body col__wrapper  d-flex align-items-center">
             <img class="icons__brand" src="/img/ps.png" alt="PSD Design" />
             <h5 class="mt-3">
@@ -993,6 +1013,23 @@
                 href="https://drive.google.com/open?id=1lMCoxllBKknQTC1Lv0eOpdeL_kejAVvJ"
                 target="_blank"
                 >PSD Web Design</a
+              >
+            </h5>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card card-body col__wrapper  d-flex align-items-center">
+            <img
+              class="icons__brand"
+              src="/img/bootstrap.png"
+              alt="Bootstrap Starter"
+            />
+            <h5 class="mt-3">
+              <a
+                href="https://drive.google.com/open?id=1z32qxnR8ff_NpFF2Cci5B4UJyly477Kt"
+                target="_blank"
+                >Bootstrap Starter Demo</a
               >
             </h5>
           </div>
