new added guidelines 2

--- a/index.html
+++ b/index.html
@@ -994,19 +994,19 @@
       <h3 class="section__title text-center">DOWNLOAD PROJECT MATERIALS</h3>
       <div class="row">
         <div class=" col-md-4">
-          <div class="card card-body col__wrapper d-flex align-items-center">
+          <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/html5.png" alt="HTML5" />
             <h5 class="mt-3">
               <a
                 href="https://drive.google.com/open?id=1_G21QNmuSaXjtAXihucw5SCpOk0Y_hUN"
                 target="_blank"
-                >Aguila Demo HTML Source</a
+                >Aguila Source Code</a
               >
             </h5>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card card-body col__wrapper  d-flex align-items-center">
+          <div class="col__wrapper  d-flex align-items-center">
             <img class="icons__brand" src="/img/ps.png" alt="PSD Design" />
             <h5 class="mt-3">
               <a
@@ -1019,7 +1019,7 @@
         </div>
 
         <div class="col-md-4">
-          <div class="card card-body col__wrapper  d-flex align-items-center">
+          <div class=" col__wrapper  d-flex align-items-center">
             <img
               class="icons__brand"
               src="/img/bootstrap.png"
@@ -1045,7 +1045,7 @@
             class="card card-body border-0 col__wrapper d-flex align-items-center"
           >
             <h5 class="mt-3">
-              <a href="/guides.html" target="_blank">Starter Guide</a>
+              <a href="/guides.html" target="_blank">Starter Notepad</a>
             </h5>
           </div>
         </div>
