--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
             class="card card-body border-0 col__wrapper  d-flex align-items-center"
           >
             <h5 class="mt-3">
-              <a href="/carbon.html" target="_blank">Some CSS Snippet</a>
+              <a href="/carbon.html" target="_blank">Some CSS/JS Snippet</a>
             </h5>
           </div>
         </div>
