--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
     <section class="container download">
       <h3 class="section__title text-center">DOWNLOAD PROJECT MATERIALS</h3>
       <div class="row">
-        <div class=" col-md-4">
+        <div class=" col-md-3">
           <div class="col__wrapper d-flex align-items-center">
             <img class="icons__brand" src="/img/html5.png" alt="HTML5" />
             <h5 class="mt-3">
@@ -1005,7 +1005,7 @@
             </h5>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="col__wrapper  d-flex align-items-center">
             <img class="icons__brand" src="/img/ps.png" alt="PSD Design" />
             <h5 class="mt-3">
@@ -1018,7 +1018,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class=" col__wrapper  d-flex align-items-center">
             <img
               class="icons__brand"
@@ -1029,7 +1029,24 @@
               <a
                 href="https://drive.google.com/open?id=1z32qxnR8ff_NpFF2Cci5B4UJyly477Kt"
                 target="_blank"
-                >Bootstrap Starter Demo</a
+                >Bootstrap 4 Basic</a
+              >
+            </h5>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class=" col__wrapper  d-flex align-items-center">
+            <img
+              class="icons__brand"
+              src="/img/flag.png"
+              alt="Bootstrap Starter"
+            />
+            <h5 class="mt-3">
+              <a
+                href="https://drive.google.com/open?id=1nn9k8aI69QbiWF3zRBze9wGOeYmAG111"
+                target="_blank"
+                >Starter File</a
               >
             </h5>
           </div>
