--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
             <img class="icons__brand" src="/img/html5.png" alt="HTML5" />
             <h5 class="mt-3">
               <a
-                href="https://drive.google.com/open?id=1_G21QNmuSaXjtAXihucw5SCpOk0Y_hUN"
+                href="https://github.com/rayjencode/aguila-sourcecode-training/tree/master"
                 target="_blank"
                 >Aguila Source Code</a
               >
